--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -35,10 +35,13 @@
     "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/websockets": "^11.1.9",
     "@prisma/client": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/passport-google-oauth20": "^2.0.17",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "multer": "^2.0.2",
+    "openai": "^6.14.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
