--- a/apps/mobile-contractor/package.json
+++ b/apps/mobile-contractor/package.json
@@ -26,6 +26,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@tanstack/react-query": "^5.90.12",
     "autoprefixer": "^10.4.20",
     "expo": "^54.0.25",
     "expo-apple-authentication": "^8.0.8",
