--- a/apps/mobile-homeowner/package.json
+++ b/apps/mobile-homeowner/package.json
@@ -29,6 +29,7 @@
     "@react-native-firebase/messaging": "^23.7.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@stripe/stripe-js": "^8.6.0",
     "@tanstack/react-query": "^5.90.12",
     "autoprefixer": "^10.4.20",
     "date-fns": "^4.1.0",
@@ -60,6 +61,8 @@
     "react-hook-form": "^7.68.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-places-autocomplete": "^2.6.1",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
